--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="flex justify-center items-center bg-emerald-300">
-    <div class="shadow-md rounded px-8 pt-8 my-40 flex max-w-4xl">
+<body class="flex justify-center items-center bg-emerald-300 h-screen">
+    <div class="w-full shadow-md my-40 flex max-w-4xl scale-75">
         <!-- Left Side (Photo) -->
-        <div class="w-1/2">
-            <img src="pic1.jpg" alt="User Photo" class="w-full h-auto  object-cover">
+        <div class="w-1/2 hover:w-full">
+            <img src="pic1.jpg" alt="User Photo" class="w-full h-full object-cover rounded-l-lg">
         </div>
 
         <!-- Right Side (Form) -->
-        <div class="w-1/2 pl-4 h-max bg-white">
-            <h2 class="text-2xl mb-4 font-bold text-center text-cyan-300">Registration Form</h2>
+        <div class="w-1/2 pl-4 rounded-r-lg h-max bg-white">
+            <h2 class="text-2xl mb-4 font-bold text-center text-emerald-400">Registration Form</h2>
             <form>
                 <div class="">
                     <label for="username" class="text-gray-700 text-sm font-bold mb-2">Username</label>
@@ -61,9 +61,9 @@
                 </div>    
                 <div class="">
                     <label for="signature" class="text-gray-700 text-sm font-bold mb-2">Digital Signature Upload</label>
-                    <input type="file" id="signature" name="signature" class="w-60 py-2 mb-4 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
+                    <input type="file" id="signature" name="signature" class="w-60 py-2 mb-3 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
                 </div>
-                <div class="text-center">
+                <div class="text-center my-3">
                     <button class="bg-cyan-300 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
                     Register
                     </button>
