--- a/index.html
+++ b/index.html
@@ -9,39 +9,39 @@
 </head>
 
 <body class="flex justify-center items-center bg-emerald-300 h-screen">
-    <div class="w-full shadow-md my-40 flex max-w-4xl scale-75">
+    <div class="w-full shadow-md flex scale-75 mx-20 flex-col md:flex-row">
         <!-- Left Side (Photo) -->
-        <div class="w-1/2 hover:w-full">
+        <div class="w-2/5 md:h-full">
             <img src="pic1.jpg" alt="User Photo" class="w-full h-full object-cover rounded-l-lg">
         </div>
 
         <!-- Right Side (Form) -->
-        <div class="w-1/2 pl-4 rounded-r-lg h-max bg-white">
+        <div class="w-3/5 pl-4 rounded-r-lg bg-white">
             <h2 class="text-2xl mb-4 font-bold text-center text-emerald-400">Registration Form</h2>
             <form>
                 <div class="">
                     <label for="username" class="text-gray-700 text-sm font-bold mb-2">Username</label>
-                    <input type="text" id="username" name="username" class="w-60 py-2 mb-4 ml-12 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
+                    <input type="text" id="username" name="username" class="w-30 md:w-50 py-2 mb-4 ml-12 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
                 </div>
                 <div class="">
                     <label for="email" class="text-gray-700 text-sm font-bold mb-2">Email</label>
-                    <input type="text" id="email" name="Email" class="w-60 py-2 mb-4 ml-20 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
+                    <input type="text" id="email" name="Email" class="w-30 md:w-50 py-2 mb-4 ml-20 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
                 </div>
                 <div class="">
                     <label for="password" class="text-gray-700 text-sm font-bold mb-2">Password</label>
-                    <input type="text" id="password" name="password" class="w-60 py-2 mb-4 ml-14 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
+                    <input type="text" id="password" name="password" class="w-30 md:w-50 py-2 mb-4 ml-14 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
                 </div>
                 <div class="">
                     <label for="firstName" class="text-gray-700 text-sm font-bold mb-2">First Name</label>
-                    <input type="text" id="firstName" name="firstName" class="w-60 py-2 mb-4 ml-12 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
+                    <input type="text" id="firstName" name="firstName" class="w-30 md:w-50 py-2 mb-4 ml-12 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
                 </div>
                 <div class="">
                     <label for="lastName" class="text-gray-700 text-sm font-bold mb-2">Last Name</label>
-                    <input type="text" id="lastName" name="lastName" class="w-60 py-2 mb-4 ml-12 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
+                    <input type="text" id="lastName" name="lastName" class="w-30 md:w-50 py-2 mb-4 ml-12 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
                 </div>
                 <div class="">
                     <label for="gender" class="text-gray-700 text-sm font-bold mb-2">Gender</label>
-                    <select id="gender" name="gender" class="w-60 py-2 mb-4 ml-20 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
+                    <select id="gender" name="gender" class="w-30 md:w-50 py-2 mb-4 ml-20 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
                         <option value="male">Male</option>
                         <option value="female">Female</option>
                         <option value="other">Other</option>
@@ -49,19 +49,19 @@
                 </div>
                 <div class="">
                     <label for="age" class="text-gray-700 text-sm font-bold mb-2">Age</label>
-                    <input type="number" id="age" name="age" class="w-60 py-2 mb-4 ml-24 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
+                    <input type="number" id="age" name="age" class="w-30 md:w-50 py-2 mb-4 ml-24 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
                 </div>
                 <div class="">
                     <label for="dob" class="text-gray-700 text-sm font-bold mb-2">Date of Birth</label>
-                    <input type="date" id="dob" name="dob" class="w-60 py-2 mb-4 ml-10 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
+                    <input type="date" id="dob" name="dob" class="w-30 md:w-50 py-2 mb-4 ml-10 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
                 </div>
                 <div class="">
                     <label for="mobile" class="text-gray-700 text-sm font-bold mb-2">Mobile Number</label>
-                    <input type="tel" id="mobile" name="mobile" class="w-60 py-2 px-3 mb-4 ml-6 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
+                    <input type="tel" id="mobile" name="mobile" class="w-30 md:w-50 py-2 px-3 mb-4 ml-6 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
                 </div>    
                 <div class="">
                     <label for="signature" class="text-gray-700 text-sm font-bold mb-2">Digital Signature Upload</label>
-                    <input type="file" id="signature" name="signature" class="w-60 py-2 mb-3 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
+                    <input type="file" id="signature" name="signature" class="w-30 md:w-60 py-2 mb-3 border border-gray-300 rounded focus:outline-none focus:shadow-outline">
                 </div>
                 <div class="text-center my-3">
                     <button class="bg-cyan-300 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
